# ai-ingredients-retrieval

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
dataset/: ingredient_clusters.jsonl  normalized_ingredients.json
src/ai_ingredients/: __init__.py  dataset_normalizer.py  ingredient_clusterer.py  ollama_normalizer.py
tests/: test_dataset_normalizer.py  test_ingredient_clusterer.py  test_ollama_normalizer.py
